--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   url: /route.html
 - title: Contact
   url: /contact.html
-- title: Verkoopsvoorwaarden
-  url: /verkoopsvoorwaarden.html
+- title: Verhuursvoorwaarden
+  url: /verhuursvoorwaarden.html
 - title: Partners
   url: /partners.html
